--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="red">Red alert!</string>
-	<string name="app_name">Hello Scaloid! for gradle</string>
+  <string name="app_name">Scaloid Scalac demo</string>
 </resources>
